# caelestia-niri-shell

./: CLEANUP_PLAN.md  CMakeLists.txt  Colors.qml  DEPENDENCIES.md  README.md  UPSTREAM_MERGE_PLAN.md  shell.qml
assets/: wrap_term_launch.sh
assets/pam.d/: fprint
assets/shaders/: droplet.frag  droplet.frag.qsb  dropletBg.frag  dropletBg.frag.qsb  goo.frag  goo.frag.qsb
assets/visualiser-presets/: classic-mirror.json  filled-waveform.json  minimal.json  neon-pulse.json  spectrum.json  waveform.json
cli/: __init__.py  parser.py
cli/subcommands/: emoji.py  scheme.py  screenshot.py  shell.py  wallpaper.py
cli/utils/: notify.py  paths.py  scheme.py  theme.py  version.py  wallpaper.py
components/: AnchorAnim.qml  Anim.qml  CAnim.qml  Card.qml  Chip.qml  CollapsibleSection.qml  ConnectionHeader.qml  ConnectionInfoSection.qml  DrawerVisibilities.qml  FocusRing.qml  MaterialIcon.qml  PropertyRow.qml  ReloadPopup.qml  SectionContainer.qml  SectionHeader.qml  StateLayer.qml  StyledText.qml
components/containers/: StyledWindow.qml  WrappedLoader.qml
components/controls/: ButtonBase.qml  CircularIndicator.qml  CircularProgress.qml  CollapsibleSection.qml  CustomMouseArea.qml  CustomSpinBox.qml  FilledSlider.qml  IconButton.qml  IconTextButton.qml  Menu.qml  SpinBoxRow.qml  SplitButton.qml  SplitButtonRow.qml  StyledBusyIndicator.qml  StyledInputField.qml  StyledProgressBar.qml  StyledRadialButton.qml  StyledRadioButton.qml  StyledScrollBar.qml  StyledSlider.qml  StyledSwitch.qml  StyledTextField.qml  SwitchRow.qml  TextButton.qml  Toggle.qml  ToggleButton.qml  ToggleRow.qml  Tooltip.qml
components/effects/: BlobShape.qml  ColouredIcon.qml  DropShape.qml  DropletBg.qml  DropletMask.qml  DropletReveal.qml  ElevationGlow.qml  InnerBorder.qml
components/filedialog/: CurrentItem.qml  DialogButtons.qml  FolderContents.qml  HeaderBar.qml  Sidebar.qml
components/images/: CachingImage.qml  FadeImage.qml
components/misc/: CustomShortcut.qml
components/widgets/: CoverArt.qml  ExtraIndicator.qml  NotificationList.qml  WindowDecorations.qml
config/: AppearanceConfig.qml  BackgroundConfig.qml  BarConfig.qml  Config.qml  DashboardConfig.qml  ExtraConfig.qml  GeneralConfig.qml  ServiceConfig.qml  Tokens.qml  UserPaths.qml  UtilitiesConfig.qml
extras/: CMakeLists.txt  cns
modules/: BatteryMonitor.qml  ConfigToasts.qml  IdleMonitors.qml  Shortcuts.qml
modules/areapicker/: AreaPicker.qml  Picker.qml
modules/background/: Backdrop.qml  Background.qml  DesktopClock.qml  Visualiser.qml  Wallpaper.qml
modules/bar/: Bar.qml  BarWrapper.qml
modules/calendar/: AddEventForm.qml  Background.qml  CalendarApp.qml  (+5 more)
plugin/: CMakeLists.txt  build.sh
plugin/cmake/: qml-module.cmake
plugin/src/Caelestia/: CMakeLists.txt  appdb.cpp  appdb.hpp  cutils.cpp  cutils.hpp  requests.cpp  requests.hpp  toaster.cpp  toaster.hpp
plugin/src/Caelestia/Blobs/: CMakeLists.txt
plugin/src/Caelestia/Components/: CMakeLists.txt
plugin/src/Caelestia/Config/: CMakeLists.txt  appearanceconfig.hpp  backgroundconfig.hpp  barconfig.hpp  config.cpp  config.hpp  configattached.cpp  configobject.cpp  configobject.hpp  dashboardconfig.hpp  generalconfig.hpp  launcherconfig.hpp  lockconfig.hpp  notifsconfig.hpp  osdconfig.hpp  serviceconfig.hpp  sessionconfig.hpp  tokens.cpp  tokens.hpp  tokensattached.cpp  userpaths.hpp  utilitiesconfig.hpp
plugin/src/Caelestia/Images/: CMakeLists.txt
plugin/src/Caelestia/Internal/: CMakeLists.txt  cachingimagemanager.cpp  circularindicatormanager.cpp  circularindicatormanager.hpp  niriipc.cpp  niriipc.hpp  nirisocket.hpp  visualiserbars.cpp  visualiserbars.hpp
plugin/src/Caelestia/Models/: CMakeLists.txt  filesystemmodel.hpp
plugin/src/Caelestia/Services/: CMakeLists.txt  audiocollector.cpp  audiocollector.hpp  audioprovider.cpp  audioprovider.hpp  beattracker.hpp  cavaprovider.cpp  cpu.cpp  cpu.hpp  memory.cpp  memory.hpp  service.hpp  storage.cpp  storage.hpp  sysmonitor.cpp  sysmonitor.hpp
scripts/: audio-port.sh  refresh-tray.sh  start-swayidle.sh
services/: Audio.qml  AudioPortSwitch.qml  BatteryMonitor.qml  BeatDetector.qml  Brightness.qml  CalEvents.qml  Cava.qml  Colours.qml  Fonts.qml  GameMode.qml  IdleService.qml  M3Variants.qml  Network.qml  NetworkUsage.qml  Niri.qml  Nmcli.qml  NotifData.qml  Notifs.qml  Players.qml  PolkitService.qml  Schemes.qml  Screens.qml  SystemUsage.qml  Time.qml  VPN.qml  Visibilities.qml  VisualiserPresets.qml  Wallpapers.qml  Weather.qml
utils/: Icons.qml  Paths.qml  Searcher.qml  SysInfo.qml
(+303 files in other folders)
